# jira-automator

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  config.yaml.example  pyproject.toml
.agents/skills/jira-tool/: SKILL.md
.claude/commands/: jira-fill.md  jira-get.md  jira-pull.md  jira-sync-plan.md  jira-transition.md
.gemini/commands/: jira-fill.toml  jira-get.toml  jira-pull.toml  jira-sync-plan.toml  jira-transition.toml
.github/: copilot-instructions.md
.github/prompts/: jira-fill.prompt.md  jira-get.prompt.md  jira-pull.prompt.md  jira-sync-plan.prompt.md  jira-transition.prompt.md
docs/: SUPERCHAT-160-backend-analytics-prd.md  contracts.md  playbooks.md
profiles/demo/: .env
profiles/investstream/: config.yaml
src/jira_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/jira_tool/: __init__.py  cli.py  client.py  comments.py  fields.py  issues.py  mcp_server.py  models.py  planning.py  service.py  settings.py  transitions.py
