[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-automation"
version = "0.1.0"
description = "API-first Jira automation tool for human and AI agent workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "mcp>=1.0",
]

[project.scripts]
jira-tool = "jira_tool.cli:main"
jira-tool-mcp = "jira_tool.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
